--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="products-container">
 			
 			<div class="product" data-name="p-1">
-				<model-viewer src="./burger.glb" ar ar-scale="fixed" poster="../../assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" auto-rotate alt="A 3D model carousel">
+				<model-viewer src="./lavash.glb" ar ar-scale="fixed" poster="../../assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" auto-rotate alt="A 3D model carousel">
 					<button slot="ar-button" id="ar-button">
 						View in your space
 					</button>
@@ -76,7 +76,7 @@
 						
 					}
 				</style>
-				<h3>Burger Set</h3>
+				<h3>Lavash</h3>
 			</div>					
 		<div class="product" data-name="p-2">
 			<model-viewer src="./salad.glb" ar ar-scale="fixed" poster="../../assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" auto-rotate alt="A 3D model carousel">
