--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			<h3>Nuggets</h3>
 			</div>
 			<div class="product" data-name="p-5">
-			<model-viewer id="model" src="./lavash.glb" ar ar-scale="fixed" poster="../../assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" auto-rotate alt="A 3D model carousel">
+			<model-viewer id="model" src="./burger.glb" ar ar-scale="fixed" poster="../../assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" auto-rotate alt="A 3D model carousel">
 					<button slot="ar-button" id="ar-button">
 						View in your space
 					</button>
@@ -312,7 +312,7 @@
 						display: none;
 					}
 			</style>
-			<h3>Lavash</h3>
+			<h3>Burger Set</h3>
 			</div>
 			<div class="product" data-name="p-6">
 			<model-viewer id="model" src="./sweetd.glb" ar ar-scale="fixed" poster="../../assets/ShopifyModels/Chair.webp" shadow-intensity="1" ar camera-controls touch-action="pan-y" auto-rotate alt="A 3D model carousel">
